force-app/main/default/objects/Interview_Contact__c/Interview_Contact__c.object-meta.xml
<CustomObject>
    <label>Interview Contact</label>
    <nameField>
        <label>Interview Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>