force-app/main/default/objects/Interview_Contact__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Interview Contacts</relationshipLabel>
    <relationshipName>Interview_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>