force-app/main/default/objects/Interview_Contact__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <description>Job Application the interview is for</description>
    <formula>Interview__r.Name__r.Id</formula>
    <inlineHelpText>Job Application the interview is for</inlineHelpText>
    <label>Job Application</label>
    <type>Text</type>
</CustomField>